--- a/css/style.css
+++ b/css/style.css
@@ -48,4 +48,11 @@ img:hover {
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
+.column {
+  display: inline-grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+}
+
+
 /* create your tile classes! we recommend .small .med .large */
