Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,23 @@ img:hover {
 
 
 /* create your tile classes! we recommend .small .med .large */
+.small {
+  width: 98%;
+  height: auto;
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.medium {
+  width: 98%;
+  height: auto;
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.large {
+  width: 98%;
+  height: auto;
+  grid-column: span 3;
+  grid-row: span 3;
+}
