--- a/css/style.css
+++ b/css/style.css
@@ -58,22 +58,52 @@ img:hover {
 
 /* create your tile classes! we recommend .small .med .large */
 .small {
-  width: 98%;
-  height: auto;
-  grid-column: span 1;
-  grid-row: span 1;
+  width: 175px;
 }
 
-.medium {
-  width: 98%;
-  height: auto;
-  grid-column: span 2;
-  grid-row: span 2;
+.med {
+  width: 350px;
 }
 
 .large {
-  width: 98%;
-  height: auto;
-  grid-column: span 3;
-  grid-row: span 3;
+  width: 600px;
+}
+
+.amiable .column .small.two {
+  grid-column: 1 / 2;
+  grid-row: ;
+}
+
+.amiable .column .small.three {
+  grid-column: 1 / 2;
+  grid-row: ;
+}
+
+.amiable .column .small.four {
+  grid-column: 2 / 3 ;
+  grid-row: ;
+}
+
+.amiable .column .small.five {
+  grid-column: 3 / 4 ;
+}
+
+.amiable .column .med.one {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+}
+
+.indifferent .column .small.one {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+.indifferent .column .small.two {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.indifferent .column .med.one {
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
 }
